# educational-game-rs

./: .gitignore  .zcodeprism.zon  Cargo.toml  Makefile  README.md
.github/workflows/: audit.yml  ci.yml  static-analysis-rust.yml  static-analysis.yml
src/: main.rs
src/data/: mod.rs  progress.rs  save.rs  system_params.rs
src/data/content/: mod.rs  resolvers.rs  types.rs
src/i18n/: keys.rs  mod.rs
src/plugins/: audio.rs  balloon_cursor.rs  content.rs  lesson_mascot.rs  mod.rs  persistence.rs  settings.rs  sky_background.rs  teacher.rs
src/questions/: fraction_bar.rs  fraction_comparison.rs  fraction_identification.rs  fraction_visualization.rs  mcq.rs  mod.rs  multiplication_grid.rs  numeric_input.rs  numeric_keypad.rs  registry.rs
src/screens/: home.rs  lesson_summary.rs  map_exploration.rs  mod.rs  save_slots.rs  settings.rs  teacher_roster.rs  teacher_shared.rs  teacher_stats.rs
src/screens/lesson_play/: explanations.rs  layout.rs  mod.rs  session.rs  visuals.rs
src/screens/lesson_play/explanations/: comparison_mult_den.rs  comparison_same_den.rs  comparison_same_num.rs  fraction_addition.rs  fraction_identification.rs  fraction_value.rs  fraction_visualization.rs  mod.rs  place_value.rs  renderer.rs
src/screens/teacher_lessons/: config.rs  mod.rs  tree.rs
src/states/: app_state.rs  game_state.rs  mod.rs  state_scoped.rs
src/ui/: animation.rs  focus_navigation.rs  mod.rs  navigation.rs  rich_text.rs  scroll.rs  text_input.rs  theme.rs  widget_styles.rs
src/ui/components/: buttons.rs  forms.rs  mod.rs  overlays.rs
